force-app/main/default/objects/Detalle_del_pedido__c/Detalle_del_pedido__c.object-meta.xml
<CustomObject>
    <label>Detalle de pedido</label>
    <nameField>
        <displayFormat>CO-{0000000}</displayFormat>
        <label>Código Detalle de pedido</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Detalles de pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>