force-app/main/default/objects/Detalle_del_pedido__c/fields/Intrucciones_especiales__c.field-meta.xml
<CustomField>
    <fullName>Intrucciones_especiales__c</fullName>
    <label>Intrucciones especiales</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>