force-app/main/default/objects/Detalle_del_pedido__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <label>Pedido</label>
    <referenceTo>Pedido__c</referenceTo>
    <relationshipLabel>Detalles de pedido</relationshipLabel>
    <relationshipName>Relations_de_pedido</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>