force-app/main/default/objects/Detalle_del_pedido__c/fields/Producto__c.field-meta.xml
<CustomField>
    <fullName>Producto__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Producto</label>
    <referenceTo>Producto__c</referenceTo>
    <relationshipLabel>Detalles de pedido</relationshipLabel>
    <relationshipName>Productos_de_pedido</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>