force-app/main/default/objects/Detalle_del_pedido__c/fields/Total_item__c.field-meta.xml
<CustomField>
    <fullName>Total_item__c</fullName>
    <description>Total por item</description>
    <formula>Cantidad__c *  Precio_unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>