force-app/main/default/objects/Detalle_del_pedido__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pedido__c</columns>
    <columns>Producto__c</columns>
    <columns>Cantidad__c</columns>
    <columns>Precio_unitario__c</columns>
    <columns>Intrucciones_especiales__c</columns>
    <columns>Total_item__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>